--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 nav{
     font-size: 25px;
     padding: 80px;
-    background-color:#002;
+    background-color:black;
+    color:blanchedalmond;
+    margin-bottom: 100px;
 }
 
 body{
-   background-color: #003;
+   background-color:black;
 }
 
 #foto{
@@ -23,3 +25,4 @@ body{
       text-align: center;
       margin-top: 80px;
   }
+  
